comenzando agregar revisión de punto limpio

--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -39,7 +39,7 @@
                     <h:outputLink value="/coplime_client_web/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/logout.xhtml">Cerrar sesión</h:outputLink>
+                    <h:commandLink action="#{Autenticador.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
         </p:overlayPanel>
@@ -59,11 +59,11 @@
                     <h:outputLink value="/coplime_client_web/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
                     <h:outputLink value="/coplime_client_web/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="/coplime_client_web/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/solicitarMantencionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
+                    <h:outputLink value="/coplime_client_web/faces/users/inspector/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
+                    <h:outputLink value="/coplime_client_web/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
                     <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/logout.xhtml">Cerrar sesión</h:outputLink>
+                    <h:commandLink action="#{Autenticador.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
         </p:overlayPanel>
@@ -83,10 +83,10 @@
                     <h:outputLink value="/coplime_client_web/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
                     <h:outputLink value="/coplime_client_web/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="/coplime_client_web/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/agregarMantencionPuntoLimpio.xhtml">Agregar mantención de punto limpio</h:outputLink>
+                    <h:outputLink value="/coplime_client_web/faces/users/operario/agregarMantencionPuntoLimpio.xhtml">Agregar mantención de punto limpio</h:outputLink>
                     <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
-                    <h:outputLink value="/coplime_client_web/faces/users/logout.xhtml">Cerrar sesión</h:outputLink>
+                    <h:commandLink action="#{Autenticador.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
         </p:overlayPanel>
