--- a/coplime_client_web/web/users/verOperariosMantencion.xhtml
+++ b/coplime_client_web/web/users/verOperariosMantencion.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui"
       contentType="text/html">
     <body>
-       <ui:composition template="../mainTemplate.xhtml">
+       <ui:composition template="/mainTemplate.xhtml">
            <ui:define name="titulo" >
                Ver operarios de mantención           
            </ui:define>
