Cambiada a primefaces las vistas de mantención
-Solicitar mantención de punto limpio
-Agregar mantención de punto limpio

--- a/coplime_client_web/web/users/cambiarContrasegna.xhtml
+++ b/coplime_client_web/web/users/cambiarContrasegna.xhtml
@@ -26,7 +26,7 @@
                         <f:facet name="header">Datos del usuario</f:facet>
                         
                         <p:outputLabel value="Nombre de usuario"/>
-                        <p:inputText value="#{cambioPassManagedBeans.username}" disabled="true"/>
+                        <p:outputLabel value="#{cambioPassManagedBeans.username}"/>
                         
                         <p:outputLabel value="Contraseña actual"/>
                         <p:inputText value="#{cambioPassManagedBeans.passActual}" type="password"/>
