Avances en cambio de estado de punto limpio
Los avances son parejos, cuando se termine se tendrá listo a la vez:
-Agregar revisión de punto limpio
-Agregar solicitud de revisión de punto limpio
-Agregar mantención de punto limpio
-Cambiar estado de punto limpio

--- a/coplime_client_web/web/users/inspector/agregarRevisionPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/inspector/agregarRevisionPuntoLimpio.xhtml
@@ -29,7 +29,7 @@
                         <p:inputTextarea value="#{AgregarRevision.detalle}"/>
                         
                         <f:facet name="footer">
-                            <p:commandButton value="Guardar revisión" action="#{AgregarRevision.guardarMantencion()}"/>
+                            <p:commandButton value="Guardar revisión" action="#{AgregarRevision.guardarRevision()}"/>
                             <p:commandButton value="Volver" action="#{AgregarRevision.volverToLista()}"/>
                         </f:facet>
                     </p:panelGrid>
