Funciona ver la imagen del detalle notificación

--- a/coplime_client_web/web/users/verDetallesNotificacion.xhtml
+++ b/coplime_client_web/web/users/verDetallesNotificacion.xhtml
@@ -48,7 +48,7 @@
                         <p:graphicImage value="#{NotificacionVerDetalles.imagen}" cache="true" width="80px" alt="No hay imagen adjunta"/>
                         
                         <f:facet name="footer">
-                            <p:commandButton value="Volver" action="#{NotificacionVerDetalles.volverToListado()}"/>
+                            <p:commandButton value="Volver" action="#{NotificacionVerDetalles.volverToLista()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
