--- a/coplime_client_web/web/users/cambiarEstadoContenedor.xhtml
+++ b/coplime_client_web/web/users/cambiarEstadoContenedor.xhtml
@@ -18,7 +18,7 @@
 
                         
                         <p:outputLabel value="Punto limpio"/>
-                        <p:outputLabel value="#{CambioEstadoContenedor.ptoLimpio}"/>
+                        <p:outputLabel value="#{CambioEstadoContenedor.nombrePtoLimpio}"/>
                         
                         <p:outputLabel value="Material del contenedor"/>
                         <p:outputLabel value="#{CambioEstadoContenedor.material}"/>
