avances en ver listado y detalles mantención

--- a/coplime_client_web/web/users/verDetallesRevision.xhtml
+++ b/coplime_client_web/web/users/verDetallesRevision.xhtml
@@ -15,7 +15,7 @@
             <ui:define name="centro">
                  <h:form>
                      <p:panelGrid columns="2" styleClass="centrar">
-                         <f:facet name="header">Datos de mantencion</f:facet>
+                         <f:facet name="header">Datos de mantención</f:facet>
                          
                          
                          <p:outputLabel value="N°"/>
