--- a/coplime_client_web/web/users/verMantenciones.xhtml
+++ b/coplime_client_web/web/users/verMantenciones.xhtml
@@ -16,43 +16,30 @@
                     <p:panelGrid columns="5" styleClass="centrar" >
                         <f:facet name="header">Listado de mantenciones</f:facet>
 
-                        <p:dataTable value="#{MantenedorPuntoLimpioVerListado.lista}" var="mant" 
-                                     widgetVar="inspectorTable" emptyMessage="No hay puntos limpios registrados en el sistema" 
-                                     filteredValue="#{MantenedorPuntoLimpioVerListado.listaBusqueda}">
-                            <p:column headerText="N°" sortBy="#{mant.num}" filterMatchMode="contains" filterBy="#{mant.num}">
-                                <h:outputText value="#{mant.num}"/>
+                        <p:dataTable value="#{MantenedorMantencionVerListado.lista}" var="rev" 
+                                     widgetVar="inspectorTable" emptyMessage="No hay revisiones registradas en el sistema" 
+                                     filteredValue="#{MantenedorMantencionVerListado.listaBusqueda}">
+                            <p:column headerText="N°" sortBy="#{rev.num}" filterMatchMode="contains" filterBy="#{rev.num}">
+                                <h:outputText value="#{rev.num}"/>
                             </p:column>
-                            <p:column headerText="Detalle" sortBy="#{mant.detalleCortado}" filterMatchMode="contains" filterBy="#{mant.detalleCortado}">
-                                <h:outputText value="#{mant.detalleCortado}"/>
+                            <p:column headerText="Detalle" sortBy="#{rev.detalleCortado}" filterMatchMode="contains" filterBy="#{rev.detalleCortado}">
+                                <h:outputText value="#{rev.detalleCortado}"/>
                             </p:column>
-                            <p:column headerText="Fecha" sortBy="#{mant.fecha}" filterMatchMode="contains" filterBy="#{mant.fecha}">
-                                <h:outputText value="#{mant.fecha}"/>
+                            <p:column headerText="Fecha" sortBy="#{rev.fecha}" filterMatchMode="contains" filterBy="#{rev.fecha}">
+                                <h:outputText value="#{rev.fecha}"/>
                             </p:column>
                             <p:column headerText="Operario encargado" rendered="#{request.isUserInRole('Administrador')}" >
-                                <h:outputText value="#{mant.operario}"/>
+                                <h:outputText value="#{rev.operario}"/>
                             </p:column>
                             <p:column headerText="" >
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-search ui-icon" action="#{MantenedorPuntoLimpioVerListado.verDetalles(puntoLimpio.num)}">
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-search ui-icon" action="#{MantenedorMantencionVerListado.verDetalles(rev.num)}">
                                 </p:commandLink>
-                            </p:column>
-                            <p:column headerText="" rendered="#{request.isUserInRole('Administrador')}">
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{puntoLimpio.num}.show();" />
-
-                                <p:confirmDialog message="¿Está seguro que desea eliminar el punto limpio?"
-                                                 header="Confirmación de eliminación de punto limpio" severity="alert"
-                                                 widgetVar="cd_#{puntoLimpio.num}" closeOnEscape="true">
-                                    <p:commandButton value="Si" actionListener="#{MantenedorPuntoLimpioVerListado.eliminar(puntoLimpio.num)}"
-                                                     oncomplete="cd_#{puntoLimpio.num}.hide();"/>
-                                    <p:commandButton value="No" onclick="cd_#{puntoLimpio.num}.hide();" type="button" />
-                                </p:confirmDialog>
                             </p:column>
                         </p:dataTable>
 
                         <f:facet name="footer">
-                            <p:button value="Solicitar mantención" href="/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml" rendered="#{request.isUserInRole('Inspector')}"/>
                             <p:button value="Agregar mantención" href="/faces/users/operario/agregarMantencionPuntoLimpio.xhtml" rendered="#{request.isUserInRole('Operario')}"/>
-                            <p:commandButton value="Ver detalles" action="#{verMantenciones.verDetalles()}"/>
-                            <p:commandButton value="Volver" action="#{verMantenciones.volver()}"/>
+                            <p:commandButton value="Volver" action="#{MantenedorMantencionVerListado.volver()}"/>
                         </f:facet>
 
 
