arreglado problema en botón "volver"

--- a/coplime_client_web/web/admin/agregarAdministrador.xhtml
+++ b/coplime_client_web/web/admin/agregarAdministrador.xhtml
@@ -47,7 +47,7 @@
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" action="#{MantenedorAdministradorAgregar.agregarAdministrador()}"/>
-                            <p:commandButton value="Volver" action="#{MantenedorAdministradorAgregar.volver()}"/>                         
+                            <p:commandButton immediate="true" value="Volver" action="#{MantenedorAdministradorAgregar.volver()}"/>                         
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
