arreglado botones volver faltantes

--- a/coplime_client_web/web/admin/agregarInspector.xhtml
+++ b/coplime_client_web/web/admin/agregarInspector.xhtml
@@ -47,7 +47,7 @@
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" action="#{MantenedorInspectorAgregar.agregarInspector()}"/>
-                            <p:commandButton value="Volver" action="#{MantenedorInspectorAgregar.volver()}"/>                         
+                            <p:commandButton immediate="true" value="Volver" action="#{MantenedorInspectorAgregar.volver()}"/>                         
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
