--- a/coplime_client_web/web/admin/agregarOperarioMantencion.xhtml
+++ b/coplime_client_web/web/admin/agregarOperarioMantencion.xhtml
@@ -47,7 +47,7 @@
                          
                          <f:facet name="footer">
                              <p:commandButton value="Guardar" action="#{MantenedorOperarioAgregar.agregarOperario()}"/>
-                            <p:commandButton value="Volver" action="#{MantenedorOperarioAgregar.volver()}"/>                       
+                            <p:commandButton immediate="true" value="Volver" action="#{MantenedorOperarioAgregar.volver()}"/>                       
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
