Ver listado y detalles de mantención funcional

--- a/coplime_client_web/web/users/verDetallesMantencion.xhtml
+++ b/coplime_client_web/web/users/verDetallesMantencion.xhtml
@@ -28,7 +28,7 @@
                          <p:inputText value="#{MantenedorMantencionVerDetalles.fecha}" disabled="true" readonly="true" />
                          
                          <p:outputLabel value="Operario revisor"/>
-                         <p:inputText value="#{MantenedorMantencionVerDetalles.inspector}" disabled="true" readonly="true" />
+                         <p:inputText value="#{MantenedorMantencionVerDetalles.operario}" disabled="true" readonly="true" />
                          
                          <p:outputLabel value="Detalles"/>
                          <p:inputTextarea value="#{MantenedorMantencionVerDetalles.detalles}" disabled="true" readonly="true" />
