--- a/coplime_client_web/web/users/verRevisiones.xhtml
+++ b/coplime_client_web/web/users/verRevisiones.xhtml
@@ -29,7 +29,7 @@
                                 <h:outputText value="#{rev.fecha}"/>
                             </p:column>
                             <p:column headerText="Inspector revisor" rendered="#{request.isUserInRole('Administrador')}" >
-                                <h:outputText value="#{rev.inspector}"/>
+                                <h:outputText value="#{rev.usuario}"/>
                             </p:column>
                             <p:column headerText="" >
                                 <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-search ui-icon" action="#{MantenedorRevisionVerListado.verDetalles(rev.num)}">
